# rasp-aqua

./: .dockerignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  config.example.yaml  config.schema  pyproject.toml  renovate.json
.github/workflows/: regression.yaml
app/: rasp-aqua.py
lib/aquarium/: scheduler.py  valve.py
src/: app.py  healthz.py
src/rasp_aqua/: control.py  scheduler.py  valve.py
tests/: test_basic.py
