[tool.poetry]
name = "rasp-aqua"
version = "0.1.0"
description = "水槽を Raspberry Pi でモニターしつつ管理するスクリプトです．"
authors = ["KIMATA Tetsuya <kimata@green-rabbit.net>"]

packages = [
    { include = "local_lib", from = "lib" },
    { include = "aquarium", from = "lib" }
]

[tool.poetry.dependencies]
coloredlogs = "^15.0.1"
docopt = "^0.6.2"
python = "^3.10"
pyyaml = "^6.0.1"
# NOTE: 1.2.2 で入ったタイムゾーン周りのバグ修正が悪さをするので，一旦 1.2.1 に固定する．
# 1.2.2 移行にする場合，おそらくテストコードも修正必要．
schedule = "1.2.1"
pytz = "^2024.1"
rpi-lgpio = "^0.6"

[tool.poetry.group.test.dependencies]
flaky = "^3.7.0"
playwright = "^1.36.0"
pytest-cov = "^5.0.0"
pytest-freezegun = "^0.4.2"
pytest-html = "^4.0.0"
pytest-mock = "^3.11.1"
pytest-playwright = "^0.4.0"
pytest-xdist = "^3.3.1"

[tool.pytest.ini_options]
minversion = "6.0"

addopts = "--verbose --cov=app --cov=lib --log-file-level=INFO --log-format=\"%(asctime)s %(levelname)s %(message)s\" --log-format=\"%(asctime)s %(levelname)s [%(filename)s:%(lineno)s %(funcName)s] %(message)s\" --capture=sys --cov-report=html --html=tests/evidence/index.htm --self-contained-html"

testpaths = [
    "tests",
]
filterwarnings = [
    "ignore:The hookimpl CovPlugin.pytest_configure_node uses",
    "ignore:The hookimpl CovPlugin.pytest_testnodedown uses",
    "ignore::DeprecationWarning:pytest_freezegun",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",

  # 以下，未使用関数

  # config.py
  "def get_db_config",

  # logger.py
  "class GZipRotator",
  "def log_formatter",
  "if log_dir_path is not None:",
  "if log_queue is not None:",
  "if is_str_log:",

  # sensor_data.py
  "def get_equip_on_minutes",
  "def get_equip_mode_period",
  "def get_day_sum",
  "def dump_data",

  # notify_slack.py
  "def info",

  # flask_util.py
  "def remote_host",
  "def auth_user",

  # selenium_util.py
  "def is_display",
  "def random_sleep",
  "def wait_patiently",
  "def dump_page",
  "def clean_dump",
  "def get_memory_info",
  "def log_memory_usage",
]

[tool.coverage.html]
directory = "tests/evidence/coverage"

[tool.black]
target-version = ['py310']
line-length = 110

[tool.isort]
profile = "black"
line_length = 110
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
